# kontiki

./: .gitignore  .gitmodules  CITING.txt  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  estimator.html  genindex.html  index.html  io.html  kontiki.html  measurements.html  objects.inv  py-modindex.html  search.html  searchindex.js  sensors.html  setup.py  sfm.html  taser.html  trajectories.html  usage.html
.circleci/: Dockerfile  config.yml
_sources/: estimator.rst.txt  index.txt  usage.rst.txt
_sources/users/: estimator.rst.txt  sew.rst.txt  toctree.rst.txt
cpplib/: CMakeLists.txt  KontikiConfig.cmake.in  TaserConfig.cmake.in
cpplib/include/entity/: entity.h
cpplib/include/entity/paramstore/: dynamic_pstore.h
cpplib/include/kontiki/: trajectory_estimator.h
cpplib/include/kontiki/measurements/: accelerometer_measurement.h  gyroscope_measurement.h  lifting_rscamera_measurement.h  newton_rscamera_measurement.h  static_rscamera_measurement.h
cpplib/include/kontiki/sfm/: landmark.h  landmark_impl.h
cpplib/include/kontiki/trajectories/: linear_trajectory.h  spline_base.h
cpplib/include/taser/: constants.h  trajectory_estimator.h  types.h
cpplib/include/taser/math/: quaternion_math.h
cpplib/include/taser/measurements/: accelerometer_measurement.h  gyroscope_measurement.h  lifting_rscamera_measurement.h  newton_rscamera_measurement.h  position_measurement.h  static_rscamera_measurement.h
cpplib/include/taser/sensors/: atan_camera.h  basic_imu.h  camera.h  constant_bias_imu.h  imu.h  pinhole_camera.h  sensors.h
cpplib/include/taser/sfm/: landmark.h  landmark_impl.h  observation.h  observation_impl.h  sfm.h  view.h  view_impl.h
cpplib/include/taser/trajectories/: linear_trajectory.h  spline_base.h  split_trajectory.h  trajectory.h  uniform_r3_spline_trajectory.h  uniform_se3_spline_trajectory.h
developers/: extending.html  ide.html  toctree.html
docs/: Makefile  conf.py  estimator.rst  index.rst  io.rst  kontiki.rst  make.bat  measurements.rst  sensors.rst  sfm.rst  taser.rst  trajectories.rst
docs/developers/: extending.rst  ide.rst  toctree.rst
docs/users/: install.rst  kontiki.rst  sensors.rst  sfm.rst  toctree.rst  trajectories.rst
include/entity/: entity.h
include/entity/paramstore/: paramstore.h
include/taser/: constant_trajectory.h  trajectory.h  trajectory_estimator.h  types.h
include/taser/cameras/: atan.h  camera.h  pinhole.h
include/taser/math/: quaternion_math.h
include/taser/measurements/: accelerometer_measurement.h  gyroscope_measurement.h  lifting_rscamera_measurement.h  newton_rscamera_measurement.h  position_measurement.h  static_rscamera_measurement.h
include/taser/sensors/: atan_camera.h  basic_imu.h  camera.h  constant_bias_imu.h  imu.h  pinhole_camera.h  sensors.h
include/taser/sfm/: landmark.h  observation.h
include/taser/trajectories/: constant_trajectory.h  linear_trajectory.h  simple_multi_trajectory.h  spline_base.h  split_trajectory.h  trajectory.h  uniform_r3_spline_trajectory.h  uniform_se3_spline_trajectory.h  (+1 more)
python/: CMakeLists.txt  setup.py
python/kontiki/: __init__.py  io.py  rotations.py  sew.py  templatemeta.py
python/kontiki/measurements/: __init__.py
python/kontiki/sensors/: __init__.py
python/kontiki/trajectories/: __init__.py
python/src/: entity_devel.cc  imumodel_play.cc  spline_devel.cc
python/src/kontiki/: camera_defs.h  imu_defs.h  measurement_defs.h  py_ceres.cc  py_trajectory_estimator.cc  py_version.cc  pydummy.cc  pysfm.cc  trajectory_defs.h
python/src/kontiki/measurements/: measurement_helper.h  py_accelerometer_measurement.cc  py_gyroscope_measurement.cc  py_lifting_rscamera_measurement.cc  py_newton_rscamera_measurement.cc  py_orientation_measurement.cc  py_position_measurement.cc  py_static_rscamera_measurement.cc
python/src/kontiki/sensors/: camera_help.h  imu_helper.h  py_atan_camera.cc  py_basic_imu.cc  py_constant_bias_imu.cc  py_pinhole_camera.cc  sensors_helper.h
python/src/kontiki/trajectories/: py_linear_trajectory.cc  py_split_trajectory.cc  py_uniform_r3_spline_trajectory.cc  py_uniform_se3_spline_trajectory.cc  py_uniform_so3_spline_trajectory.cc  spline_helpers.h  trajectory_helper.h
python/src/taser/: camera_defs.h  imu_defs.h  measurement_defs.h  py_ceres.cc  py_trajectory_estimator.cc  pysfm.cc  trajectory_defs.h
python/src/taser/measurements/: py_accelerometer_measurement.cc  py_gyroscope_measurement.cc  py_lifting_rscamera_measurement.cc  py_newton_rscamera_measurement.cc  py_position_measurement.cc  py_static_rscamera_measurement.cc
python/src/taser/sensors/: py_constant_bias_imu.cc  sensors_helper.h
python/src/taser/trajectories/: py_linear_trajectory.cc  py_split_trajectory.cc  py_uniform_r3_spline_trajectory.cc  py_uniform_se3_spline_trajectory.cc  py_uniform_so3_spline_trajectory.cc  trajectory_helper.h
python/taser/: io.py  utils.py
python/tests/: conftest.py  test_cameras.py  test_estimator.py  test_imu.py  test_io.py  test_measurements.py  test_sfm.py
python/tests/fixtures/: camera_fixtures.py  sfm_fixtures.py
python/tests/sensors/: test_sensors.py
python/tests/trajectories/: test_general.py  test_spline_trajectories.py  test_split.py
src/: debug_constructor.cc  dummy.cpp  entity_devel.cc  imumodel_play.cc  main.cpp  spline_devel.cc
src/pybindings/: py_trajectory_estimator.cc
taser/: io.py  rotations.py  templatemeta.py  trajectory_estimator.py
taser/cameras/: __init__.py
taser/measurements/: __init__.py
taser/sensors/: __init__.py
taser/trajectories/: __init__.py
tests/: conftest.py  dummy_test.py  estimator_test.py  module_test.py  scratch_test.py  test_cameras.py  test_estimator.py  test_imu.py  test_measurements.py
tests/fixtures/: camera_fixtures.py  sfm_fixtures.py
tests/sensors/: test_sensors.py
tests/trajectories/: constant_trajectory_test.py  test_general.py  test_r3spline_trajectory.py  test_spline_trajectories.py
users/: estimator.html  install.html  io.html  kontiki.html  measurements.html  sensors.html  sew.html  sfm.html  toctree.html  trajectories.html
(+39 files in other folders)
